# hackbybay

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD_dependency_transplant_engine.md  README.md  requirements.txt
backend/: config.py  container.py  demo_fixtures.py  main.py  pyproject.toml
backend/adapters/fake/: fake_auth.py  fake_event_sink.py  fake_github.py  fake_graph_store.py  fake_llm.py  fake_record_store.py  fake_repo_content.py  fake_sandbox.py
backend/adapters/live/: live_auth.py  live_graph_store.py  live_llm.py  live_record_store.py
backend/domain/: constants.py  determinism.py  enums.py  errors.py  models.py
backend/ports/: auth.py  event_sink.py  github.py  graph_store.py  llm.py  record_store.py  repo_content.py  sandbox.py
backend/routers/: deps.py  health.py
backend/scripts/: build_snapshot.py  butterbase_schema.sql  prove_judges.py  record_golden.py  smoke_live_services.py
backend/services/: battery.py  call_site_scanner.py  graph_builder.py  incident_state.py  ingestion.py  judges.py  manifest_parser.py  mitigation.py  normalizer.py  orchestrator.py  pull_request.py  recipes.py  review.py  sanitizer.py  transplant_agent.py  transplant_prompt.py  transplant_validators.py  underwriter.py  verification.py
backend/static/: index.html
backend/tests/: test_config.py
backend/tests/domain/: test_constants.py  test_determinism.py  test_enums.py  test_errors.py  test_models.py
backend/tests/ports/: test_auth.py  test_event_sink.py  test_github.py  test_graph_store.py  test_llm.py  test_record_store.py  test_repo_content.py  (+1 more)
(+23 files in other folders)
