[project]
name = "depcover-backend"
version = "0.1.0"
description = "Dependency Transplant Engine backend"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "httpx",
    "neo4j>=5",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[tool.mypy]
python_version = "3.14"
packages = ["backend"]
strict = true
warn_unreachable = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ANN401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
